src/styles/flex-styles.scss
.d-flex {
  display: flex !important;
}

.d-inline-flex {
  display: inline-flex !important;
}

.d-block {
  display: block !important;
}

.p-sticky {
  position: sticky !important;
}

.align-items-baseline {
  align-items: baseline;
}

.align-items-end {
  align-items: end;
}

.align-items-start {
  align-items: start;
}

.align-items-center {
  align-items: center;
}

.justify-content-between {
  justify-content: space-between;
}

.justify-content-center {
  justify-content: center;
}

@for $i from 1 through 10 {
  .flex-grow-#{$i} {
    flex-grow: $i;
  }
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.flex-row-reverse {
  flex-direction: row-reverse;
}

.flex-column {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.d-inline-block {
  display: inline-block !important;
}

.d-none {
  display: none !important;
}

